--- a/flower-dapp/src/app/globals.css
+++ b/flower-dapp/src/app/globals.css
@@ -16,6 +16,19 @@
   }
 }
 
+@keyframes spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+.indefinite-rotate{
+  animation: spin 5s linear infinite;
+}
+
 body {
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(
