--- a/flower-dapp/src/app/globals.css
+++ b/flower-dapp/src/app/globals.css
@@ -4,9 +4,15 @@
 @tailwind components;
 @tailwind utilities;
 :root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+  line-height: 1.5;
+  font-weight: 400;
+  background-color: #10111d;
+  width: 100%;
+  font-synthesis: none;
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-text-size-adjust: 100%;
 }
 
 @media (prefers-color-scheme: dark) {
